--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
     crossorigin="anonymous"
     />
-
+    <!-- link to get special fonts and icon -->
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -37,19 +37,23 @@
 
     <div class = "container-fluid">
         <div class="row">
-            <!-- search bar -->
+            <!-- search panel -->
             <div id = "search-bar" class="col-lg-3">
                 <form class="form-inline">
                     <div class="form-group mb-2">
                       <label for="staticEmail2" class="sr-only">Email</label>
-                      <h4>Search city:</h4>
+                      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Search city:">
                     </div>
-
                     <div class="form-group mx-sm-3 mb-2">
-                      <label for="inputPassword2" class="sr-only"></label>
-                      <input id="city-input" class="form-control" placeholder="City name">
+                      <label for="inputPassword2" class="sr-only"> </label>
+                      <input id="city-input" class="form-control"  placeholder="City name">
                     </div>
-                    <button type="submit" id="search-city-button" class="btn btn-primary mb-2"><i class="fas fa-search"></i></button>
+                    <button 
+                        type="submit"
+                        id="search-city-button" 
+                        class="btn btn-primary mb-2"> Confirm  
+                         <i class="fas fa-search"></i> <!-- Icon-->
+                    </button>
                 </form>
 
                 <div id = "search-history" class="btn-group-vertical"></div>
